[package]
name = "wasm-blog"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
desription = "A blog written in rust compile to wasm."
license = "MIT"

[dependencies]
js-sys = "0.3.35"
include_dir = "0.5.0"
dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
gloo = "0.2.0"
femme = "1.3.0"
log = "0.4.8"
console_error_panic_hook = "0.1.6"
futures-timer = { version = "3.0.1", features = ["wasm-bindgen"]}
futures = "0.3.4"
pulldown-cmark = "0.6.1"

[dependencies.web-sys]
version = "0.3.35"
features = [
"Document",
 "Element",
 "Document",
 "NodeList"
 ]

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"
