[package]
name = "wasm-blog"
version = "0.1.0"
authors = ["Raymond Yeh <extraymond@gmail.com>"]
edition = "2018"
desription = "A blog written in rust compile to wasm."
license = "MIT"

# [package.metadata.wasm-pack.profile.release]
# wasm-opt = false

[dependencies]
js-sys = "0.3.35"
include_dir = "0.5.0"
dodrio-ext = { git = "https://github.com/extraymond/dodrio-ext" }
gloo = "0.2.0"
femme = "1.3.0"
log = "0.4.8"
console_error_panic_hook = { version = "0.1.6", optional = true}
futures-timer = { version = "3.0.1", features = ["wasm-bindgen"]}
futures = "0.3.4"
pulldown-cmark = "0.6.1"
anyhow = "1.0.26"
thiserror = "1.0.10"
wee_alloc = { version = "0.4.5", optional = true }
cfg-if = "0.1.10"
vega_lite_3 = { vesion = "0.2.4" }
showata = "0.2.0"
ndarray = "0.13.0"
getrandom = { version = "0.1.14", features = ["wasm-bindgen"]}

[features]
default = ["console_error_panic_hook", "wee_alloc"]


[dependencies.web-sys]
version = "0.3.35"
features = [
"Document",
 "Element",
 "Document",
 "NodeList",
 "HtmlHeadElement",
 "HtmlLinkElement",
 "EventTarget",
 "CustomEvent",
 "CustomEventInit",
 "MouseEvent",
 "DomRect",
 "DomRectReadOnly"
 ]

[lib]
crate-type = ["cdylib"]

[dev-dependencies]
wasm-bindgen-test = "0.3.8"

[profile.release]
lto = true
